# Forge_mcp_demo

./: .gitignore  README.md  mcp.py  pyproject.toml  swagger_to_fastapi.ipynb
stubapi/: api.py  models.py
