[project]
name = "fastmcp-azd-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<0.112",
    "fastmcp>=2.7.0",
    "gunicorn>=22.0,<23.0",
    "ipykernel>=6.29.5",
    "mcp[cli]>=1.9.3",
    "openapi-to-fastapi>=0.16.0",
]
